--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7,10 +7,6 @@
 /* CSS Variables and design tokens */
 @import 'base.css';
 /* Reset and base styles */
-@import 'components/button.css';
-/* Reusable component styles */
-@import 'components/form.css';
-@import 'components/message.css';
 @import 'layout/maincontent.css';
 /* Layout-specific styles */
 @import 'layout/sidebar.css';
@@ -18,3 +14,4 @@
 @import 'pages/authPage.css';
 @import 'pages/homePage.css';
 @import 'pages/searchPage.css';
+@import 'pages/createPage.css';
